--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <center>
      <h1 class="btn btn-warning heading">AI Video Surveillance App</h1>
      <br><br>
-     <h3 class="btn btn-success" id="start">Start</h3>
+     <button class="btn btn-success" onclick="start();" id="start">Start</button>
      <br><br>
      <h3 class="btn btn-info" id="number_of_objects"></h3>
      <br><br>
